tests/NormalTests/paczka1/small_fuzzy/59027945.err
Error in line 5: o28 A692 9/,9
Error in line 10: A71$ S7$4 48,5
Error in line 12: o28 S794 79,3
